--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
+	<head>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
 
-<h1>Hello</h1>
+		<h1>Hello</h1>
 
-
-</body>
+	</body>
 </html>
