add main information in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,89 @@
 	</head>
 	<body>
 
-		<h1>Hello</h1>
+		<div class="container">
+			<div class="block">
+				<div class="contactInfo">
+					<h1>Ihor Kalyta</h1>
+					<h3>Contact information</h3>
+					<p class="contactP"><b>Phone:</b> +38 096 597 67 95</p>
+					<p class="contactP"><b>Linkedin:</b> linkedin.com/in/ihor-kalyta</p>
+					<p class="contactP"><b>Email:</b> kalyta.ihor@gmail.com</p>
+				</div>
+				<div class="image">
+					<img src="./images/DSC_03201.jpg">
+				</div>
+			</div>	
+			
+			<div class="block">
+				<div class="name">
+					<p class="blue"><b>Summary of qualifications</b></p>
+				</div>
+				<div class="description">
+					<p>An initiative, self-motivated person. Tolerant and flexible, adjusts to different situations. Strong verbal and personal communication skills.</p>
+				</div>
+			</div>
+
+			<div class="block">
+				<div class="name">
+					<p class="blue"><b>Skills</b></p>
+				</div>
+				<div class="descriptionFlex">
+					<div class="languages">
+						<p class="blue"><b>Programming Languages/Technologies</b></p>
+						<ul>
+							<li>JavaScript</li>
+							<li>NodeJS</li>
+							<li>ReactJS</li>
+							<li>HTML</li>
+							<li>CSS</li>
+							<li>SQL</li>
+							<li>Git</li>
+						</ul>
+					</div>
+					<div class="softSkills">
+						<p class="blue"><b>Soft skills</b></p>
+						<ul>
+							<li>Responsible</li>
+							<li>Attentive to the details</li>
+							<li>Team player</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="block">
+				<div class="name">
+					<p class="blue"><b>Experience</b></p>
+				</div>
+				<div class="description">
+					<p><b>SoftServe ITA Student -- WebUI/NodeJS 07.2019 – 10.2019</b></p>
+				</div>
+			</div>
+
+
+			<div class="block">
+				<div class="name">
+					<p class="blue"><b>Languages</b></p>
+				</div>
+				<div class="description">
+					<p><b>English:</b> Intermediate</p>
+					<p><b>German:</b> Elementary</p>
+				</div>
+			</div>
+
+			<div class="block">
+				<div class="name">
+					<p class="blue"><b>Education</b></p>
+				</div>
+				<div class="description">
+					<p><b>Institute of Innovative Education of Kyiv National University of Construction and Architecture</b></p>
+					<p>Heat and gas supply and ventilation 2012 - 2016</p>
+				</div>
+			</div>
+
+		</div>
 
 	</body>
 </html>
