rename class names for paragraph

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 				<div class="contactInfo">
 					<h1>Ihor Kalyta</h1>
 					<h3>Contact information</h3>
-					<p class="contactP"><b>Phone:</b> +38 096 597 67 95</p>
-					<p class="contactP"><b>Linkedin:</b> linkedin.com/in/ihor-kalyta</p>
-					<p class="contactP"><b>Email:</b> kalyta.ihor@gmail.com</p>
+					<p class="brown"><b>Phone:</b><span class="contactVal"> +38 096 597 67 95</span></p>
+					<p class="brown"><b>Email:</b><span class="contactVal"> kalyta.ihor@gmail.com</span></p>
+					<p class="brown"><b>Linkedin:</b><span class="contactVal"> linkedin.com/in/ihor-kalyta</span></p>					
 				</div>
 				<div class="image">
 					<img src="./images/DSC_03201.jpg">
@@ -21,7 +21,7 @@
 			
 			<div class="block">
 				<div class="name">
-					<p class="blue"><b>Summary of qualifications</b></p>
+					<p class="brown"><b>Summary of qualifications</b></p>
 				</div>
 				<div class="description">
 					<p>An initiative, self-motivated person. Tolerant and flexible, adjusts to different situations. Strong verbal and personal communication skills.</p>
@@ -30,11 +30,11 @@
 
 			<div class="block">
 				<div class="name">
-					<p class="blue"><b>Skills</b></p>
+					<p class="brown"><b>Skills</b></p>
 				</div>
 				<div class="descriptionFlex">
 					<div class="languages">
-						<p class="blue"><b>Programming Languages/Technologies</b></p>
+						<p class="brown"><b>Programming Languages/Technologies</b></p>
 						<ul>
 							<li>JavaScript</li>
 							<li>NodeJS</li>
@@ -46,7 +46,7 @@
 						</ul>
 					</div>
 					<div class="softSkills">
-						<p class="blue"><b>Soft skills</b></p>
+						<p class="brown"><b>Soft skills</b></p>
 						<ul>
 							<li>Responsible</li>
 							<li>Attentive to the details</li>
@@ -59,7 +59,7 @@
 
 			<div class="block">
 				<div class="name">
-					<p class="blue"><b>Experience</b></p>
+					<p class="brown"><b>Experience</b></p>
 				</div>
 				<div class="description">
 					<p><b>SoftServe ITA Student -- WebUI/NodeJS 07.2019 – 10.2019</b></p>
@@ -69,7 +69,7 @@
 
 			<div class="block">
 				<div class="name">
-					<p class="blue"><b>Languages</b></p>
+					<p class="brown"><b>Languages</b></p>
 				</div>
 				<div class="description">
 					<p><b>English:</b> Intermediate</p>
@@ -79,7 +79,7 @@
 
 			<div class="block">
 				<div class="name">
-					<p class="blue"><b>Education</b></p>
+					<p class="brown"><b>Education</b></p>
 				</div>
 				<div class="description">
 					<p><b>Institute of Innovative Education of Kyiv National University of Construction and Architecture</b></p>
