--- a/index.html
+++ b/index.html
@@ -4,37 +4,34 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-
 		<div class="container">
 			<div class="block">
 				<div class="contactInfo">
 					<h1>Ihor Kalyta</h1>
 					<h3>Contact information</h3>
-					<p class="brown"><b>Phone:</b><span class="contactVal"> +38 096 597 67 95</span></p>
-					<p class="brown"><b>Email:</b><span class="contactVal"> kalyta.ihor@gmail.com</span></p>
-					<p class="brown"><b>Linkedin:</b><span class="contactVal"> linkedin.com/in/ihor-kalyta</span></p>					
+					<p class="blue">Phone:<span class="contactVal"> +38 096 597 67 95</span></p>
+					<p class="blue">Email:<span class="contactVal"> kalyta.ihor@gmail.com</span></p>
+					<p class="blue">Linkedin:<span class="contactVal"> linkedin.com/in/ihor-kalyta</span></p>					
 				</div>
 				<div class="image">
 					<img src="./images/DSC_03201.jpg">
 				</div>
-			</div>	
-			
+			</div>			
 			<div class="block">
 				<div class="name">
-					<p class="brown"><b>Summary of qualifications</b></p>
+					<p class="brown">Summary of qualifications</p>
 				</div>
 				<div class="description">
 					<p>An initiative, self-motivated person. Tolerant and flexible, adjusts to different situations. Strong verbal and personal communication skills.</p>
 				</div>
 			</div>
-
 			<div class="block">
 				<div class="name">
-					<p class="brown"><b>Skills</b></p>
+					<p class="brown">Skills</p>
 				</div>
 				<div class="descriptionFlex">
 					<div class="languages">
-						<p class="brown"><b>Programming Languages/Technologies</b></p>
+						<p class="brown">Programming Languages/Technologies</p>
 						<ul>
 							<li>JavaScript</li>
 							<li>NodeJS</li>
@@ -46,7 +43,7 @@
 						</ul>
 					</div>
 					<div class="softSkills">
-						<p class="brown"><b>Soft skills</b></p>
+						<p class="brown">Soft skills</p>
 						<ul>
 							<li>Responsible</li>
 							<li>Attentive to the details</li>
@@ -55,39 +52,35 @@
 					</div>
 				</div>
 			</div>
-
-
 			<div class="block">
 				<div class="name">
-					<p class="brown"><b>Experience</b></p>
+					<p class="brown">Experience</p>
 				</div>
 				<div class="description">
 					<p><b>SoftServe ITA Student -- WebUI/NodeJS 07.2019 – 10.2019</b></p>
+					<p class="brown"><i>Project description</i></p>
+					<p>Online social network similar to Instagram</p>
+					<p>During this project I was working with such technologies as ReactJs, Redux, Express.</p>
 				</div>
 			</div>
-
-
 			<div class="block">
 				<div class="name">
-					<p class="brown"><b>Languages</b></p>
+					<p class="brown">Languages</p>
 				</div>
 				<div class="description">
 					<p><b>English:</b> Intermediate</p>
 					<p><b>German:</b> Elementary</p>
 				</div>
 			</div>
-
 			<div class="block">
 				<div class="name">
-					<p class="brown"><b>Education</b></p>
+					<p class="brown">Education</p>
 				</div>
 				<div class="description">
 					<p><b>Institute of Innovative Education of Kyiv National University of Construction and Architecture</b></p>
 					<p>Heat and gas supply and ventilation 2012 - 2016</p>
 				</div>
 			</div>
-
 		</div>
-
 	</body>
 </html>
